# eluciDoc

./: .gitignore  LICENSE.txt  README.md  accessory.py  eluciDoc.py  pyproject.toml  requirements.txt
src/elucidoc/: accessory.py  eluciDoc.py
