[build-system]
requires      = ["setuptools >=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elucidoc"
version = "2024.6.11"
license = {file = "LICENSE.txt"}
description = "Screens legal and other texts for sentences and clauses containing user defined search phrases"
readme = "README.md"
authors = [{name = 'John Blake'}, {email = "elucidoc535@gmail.com"}]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License"
]
keywords = ["legal", "text", "analysis"]
dependencies = [
    "docx2python==2.10.1", "openpyxl==3.1.3", "pandas==2.2.2", "pdfminer.six==20231228", "python-docx==1.1.2",
    "rich==13.7.1", "spacy==3.7.5", "textacy==0.13.0"
]

[project.urls]
"Source Code" = "https://github.com/jblake1965/eluciDoc"
"License" = "https://github.com/jblake1965/eluciDoc/blob/developer/LICENSE.txt"
