[build-system]
requires      = ["setuptools >=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elucidoc"
version = "2024.7.24"
license = {file = "LICENSE.txt"}
description = "Screens legal and other texts for sentences and clauses containing user defined search phrases"
readme = "README.md"
authors = [{name = 'John Blake'}, {email = "elucidoc535@gmail.com"}]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License"
]
keywords = ["legal", "text", "analysis"]
dependencies = [
    "docx2python==3.0.2", "openpyxl==3.1.5", "pandas==2.2.3", "pdfminer.six==20240706", "python-docx==1.1.2",
    "rich==13.9.2", "spacy==3.7.6", "textacy==0.13.0"
]

[project.urls]
"Source Code" = "https://github.com/jblake1965/eluciDoc"
"License" = "https://github.com/jblake1965/eluciDoc/blob/developer/LICENSE.txt"
